# monitor

./: .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  config.yml
.github/workflows/: build.yml  release.yml
frontend/: package.json
frontend/src/pages/: index.tsx
monitor/: Cargo.toml
monitor/frontend/: package.json
monitor/frontend/src/components/config/: agent.tsx  agentUpdateBtn.tsx  passiveBtn.tsx  passiveUpdateBtn.tsx  setting.tsx  style.less
monitor/frontend/src/components/view/: default.tsx
monitor/frontend/src/locales/en-US/: pages.ts  tables.ts
monitor/frontend/src/locales/zh-CN/: pages.ts  tables.ts
monitor/frontend/src/pages/: config.tsx  view.tsx
monitor/locales/: en-US.yml  zh-CN.yml
monitor/response/: monitor.yml
monitor/src/: api.rs  lib.rs  server.rs  service.rs  ws.rs
monitor/src/migration/: m20230101_000001_create_table.rs  migrator.rs
monitor_api/: CHANGELOG.md  Cargo.toml
monitor_api/src/: lib.rs
monitor_api/src/entity/: agent_settings.rs  agents.rs  passive_agents.rs
monitor_api/src/viewer/: agent_settings.rs  agents.rs  passive_agents.rs
src/: api.rs  lib.rs  server.rs  service.rs  ws.rs
