[package]
name = "monitor"
version = "0.3.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

[dependencies]
derivative = "2.2.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.128" }
serde_repr = "0.1.19"
actix = "0.13.5"
actix-web-actors = "4.3.1"
actix-web-validator = "6.0.0"
validator = { version = "0.18.1", features = ["derive"] }
itertools = "0.13.0"
once_cell = "1.19.0"
base64 = "0.22.1"
aes-gcm = "0.10.3"
crc32fast = "1.4.2"
miniz_oxide = "0.8.0"
bytes = "1.7.1"

skynet_api_monitor = "0.3.0"
skynet_api_agent = "0.3.1"
skynet_api = "0.1.2"
skynet_macro = "0.1.0"
sea-orm-migration = { version = "1.0.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]

actix-cloud = { version = "0.4.1", features = ["response-build"] }
