[package]
name = "monitor"
version = "0.4.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

[dependencies]
derivative = "2.2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = "0.1"
actix = "0.13"
actix-web-actors = "4.3"
actix-web-validator = "6.0"
validator = { version = "0.18", features = ["derive"] }
itertools = "0.13"
once_cell = "1.20"
base64 = "0.22"
aes-gcm = "0.10"
crc32fast = "1.4"
miniz_oxide = "0.8"
bytes = "1.7"

actix-cloud = { version = "0.4", default-features = false, features = [
    "traceid",
    "i18n",
] }
skynet_api_monitor = "0.4"
skynet_api_agent = "0.4"
skynet_api = { version = "0.2", features = ["plugin"] }
skynet_macro = "0.2"
sea-orm-migration = { version = "1.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
actix-cloud = { version = "0.4", default-features = false, features = [
    "response-build",
] }

[workspace]
