[package]
name = "monitor"
version = "0.5.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

[dependencies]
actix = "0.13"
derivative = "2.2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = "0.1"
actix-web-validator = "6.0"
validator = { version = "0.18", features = ["derive"] }
itertools = "0.13"
once_cell = "1.20"
base64 = "0.22"
aes-gcm = "0.10"
crc32fast = "1.4"
miniz_oxide = "0.8"
bytes = "1.7"
abi_stable = "0.11"
ecies = { version = "0.2", default-features = false, features = [
    "std",
    "pure",
] }
dashmap = "6.1"

actix-cloud = { version = "0.4", default-features = false, features = [
    "traceid",
    "i18n",
    "state",
    "response-json",
] }
skynet_api_monitor = { version = "0.5", path = "../monitor_api" }
skynet_api_agent = "0.5"
skynet_api = { version = "0.3", features = [
    "plugin-api",
    "request-param",
    "service-skynet",
    "viewer",
] }
skynet_macro = "0.3"
sea-orm-migration = { version = "1.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
actix-cloud = { version = "0.4", default-features = false, features = [
    "response-build",
] }
